feat: adicionado top bar, e o mascote pixel art

--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
         *
         {
             margin: 0;
             padding: 0;
             box-sizing: 0;
+            font-family: "Elms Sans", sans-serif;
         }
     </style>
     <head>
