--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
         *
         {
             margin: 0;
             padding: 0;
             box-sizing: 0;
-            font-family: "Elms Sans", sans-serif;
+            font-family: "Fredoka", sans-serif;
+            font-optical-sizing: auto;
         }
     </style>
     <head>
